Thu Dec  6 09:11:51 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* bundle.make (internal-bundle-install): Use h option with tar to
	dereference symbolic links to external files if any; use --exclude
	Contents/Resources with tar; create the Contents/Resources -->
	Resources link manually after installing the bundle with tar.
	
Mon Dec  3 10:09:08 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* documentation.make ($(INTERNAL_doc_NAME).tar.gz): Bug fix: added
	missing z option to tar.
	
Mon Dec  3 09:44:26 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* target.make: New target - Mac OS X 10.1.1 darwin5.1 (Patch by
	Helge Hess <helge.hess@skyrix.com>).

Wed Nov 28 18:17:50 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* clibrary.make (LIBRARY_FILE): Fixed typo for BUILD_DLL ... 
	library_name being used instead of clibrary_name.

Wed Nov 28 11:18:01 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* configure.in (--with-user-root): New configure option allowing
	to ask for a different GNUSTEP_USER_ROOT to be used.
	* configure: Regenerated.
	* GNUstep.sh.in (GNUSTEP_USER_ROOT): Define from configure if
	needed.
	* GNUstep.csh.in: Idem.	

Wed Nov 28 11:08:07 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* brain.make (WO_LDFLAGS, WO_LIBS, WO_DEFINE): Removed.
	(Suggested by Helge Hess <helge.hess@skyrix.com>).
	
2001-11-26  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.NetBSD: Update from jnqt@fbe.freeserve.ne.jp.

Thu Nov 22 13:28:34 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* configure.in (AUTO_DEPENDENCIES): New configure check which
	automatically sets AUTO_DEPENDENCIES to yes if the compiler is GCC
	=> 3.x.
	* configure: Regenerated.
	* config.make.in (AUTO_DEPENDENCIES): Added.
	* rules.make (AUTO_DEPENDENCIES_FLAGS): Set them only if not
	already set.

Thu Nov 22 10:41:39 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* source-distribution.make (tgz): tgz target renamed to dist.
	(Suggestion by Dan Pascu <dan@services.iiruc.ro>).
	