@@ -75,8 +75,9 @@ PERL = @PERL@
 VERTAG = `echo $(GNUSTEP_MAKE_VERSION) | tr '.' '_'`
 
 MAKE_FILES = aggregate.make application.make bundle.make service.make \
-	common.make brain.make java.make jni.make library.make rules.make \
-	target.make tool.make ctool.make test-library.make names.make \
+	common.make library-combo.make java.make jni.make library.make \
+	rules.make target.make names.make \
+	tool.make ctool.make test-library.make \
 	objc.make test-application.make test-tool.make subproject.make \
 	palette.make gswapp.make gswbundle.make clibrary.make \
 	documentation.make MediaBook.func executable.template \
